# ECE1724_Project

./: .gitignore  Cargo.toml  Project_Proposal.md  README.md  guess.py  guess.txt  test.txt
Windows/: Cargo.toml  README.md
Windows/src/: api_key.rs  llm.rs  mcp.rs  session.rs
logs/: Session 1_branch-1.json  Session 1_branch-2.json  Session 1_main.json  Session 2_branch-1.json  Session 2_branch-2.json  Session 2_main.json  Session 3_branch-1.json  Session 3_main.json  Session 4_main.json  Session 6_main.json
macOS/: Cargo.toml  README.md
macOS/logs/: Session 1_branch-2.json
macOS/src/: app.rs  main.rs  tui.rs
macOS/src/frontend/: actions.rs  api_key.rs  keyboard.rs  mouse.rs
src/: api_key.rs  app.rs  llm.rs  main.rs  mcp.rs  mcp_server.rs  session.rs  tui.rs
src/frontend/: action_ollama.rs  actions.rs  keyboard.rs  mod.rs  mouse.rs
src/session/: memory.rs  mod.rs
