[package]
name = "mycli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
bytes = "1.10.1"
clap = "4.5.51"
crossterm = "0.29.0"
futures-util = "0.3.31"
ratatui = { version = "0.29.0", features = ["crossterm"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
thiserror = "2.0.17"
tokio = "1.48.0"
uuid = { version = "1.18.1", features = ["v4"] }
